Fix Text Alignment in Payment Dialog

--- a/src/app/shared/components/payment-dialog/payment-dialog.component.scss
+++ b/src/app/shared/components/payment-dialog/payment-dialog.component.scss
@@ -31,6 +31,7 @@ h3 {
 
 .info-wrapper {
   margin-top: 16px;
+  text-align: center;
 }
 
 .mat-form-field {
